Fix column header adjustment for scrollbar on Resident screen

--- a/WebUI/Keebee.AAT.Administrator/Content/Site.css
+++ b/WebUI/Keebee.AAT.Administrator/Content/Site.css
@@ -388,6 +388,9 @@ thead {
 .col-date {
     width: 110px;
 }
+.col-date-scrollbar {
+    width: 120px;
+}
 .col-date-row {
     width: 90px;
 }
